--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <div class="drawer lg:drawer-open">
       <input id="main-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col min-w-0 h-dvh">
-        <header class="sticky top-0">
+        <header class="sticky top-0 z-20">
           <%= render "shared/navbar" %>
           <div id="flash" class="absolute left-1/2 -translate-x-1/2 z-40 flex flex-col items-center">
             <%= render "shared/flash" %>
