--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="drawer-side">
+<div class="drawer-side z-20">
   <label for="main-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
   <aside class="bg-base-300 h-dvh flex flex-col overflow-y-auto w-80">
     <ul class="menu menu-xl w-full flex-1">
