--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -6,16 +6,26 @@
         <details <% if !Current.organization %>open<% end %>>
           <summary>
             <% if Current.organization %>
-              <%= organization_avatar(Current.organization, classes: "size-5") %>
+              <%= organization_avatar(Current.organization, classes: "size-6") %>
               <%= Current.organization.name %>
             <% else %>
               <%= t("shared.navigation.select_organization") %>
             <% end %>
           </summary>
           <ul>
+            <% if Current.organization %>
+              <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: Current.organization.user_requests.pending.count, active: [["organizations/memberships", "organizations/invitations", "organizations/membership_requests"], []] %>
+              <%= nav_link t("organizations.show.title"), organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["show"]] %>
+              <% if Current.membership.admin? %>
+                <%= nav_link t("organizations.edit.title"), edit_organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["edit"]] %>
+                <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(Current.organization), icon: subscription_status_label(Current.organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+              <% end %>
+              <li></li>
+            <% end %>
+
             <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
             <% Current.organizations.excluding(Current.organization).each do |organization| %>
-              <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
+              <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
             <% end %>
           </ul>
         </details>
@@ -26,14 +36,7 @@
     </ul>
 
     <ul class="menu menu-xl w-full mb-8">
-      <% if Current.organization %>
-        <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: Current.organization.user_requests.pending.count, active: [["organizations/memberships", "organizations/invitations", "organizations/membership_requests"], []] %>
-        <%= nav_link t("organizations.show.title"), organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["show"]] %>
-        <% if Current.membership.admin? %>
-          <%= nav_link t("organizations.edit.title"), edit_organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["edit"]] %>
-          <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(Current.organization), icon: subscription_status_label(Current.organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
-        <% end %>
-      <% end %>
+      <%= nav_link Rails.application.config_for(:settings).dig(:site, :name), root_path, icon: "logo.png", active: :exact %>
     </ul>
   </aside>
 </div>
