--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -1,3 +1,4 @@
+<%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
 <%= nav_link t("users.referrals.index.title"), user_referrals_path, icon: "🎁", badge: "New" %>
 <%= nav_link t("users.connected_accounts.index.title"), user_connected_accounts_path, icon: "🔗" if Devise.omniauth_configs.keys.any? %>
 <li></li>
