not full width table triggers @lg breakpont

--- a/app/views/public/organizations/show.html.erb
+++ b/app/views/public/organizations/show.html.erb
@@ -1,5 +1,7 @@
 <% content_for :title, @organization.name %>
 
 <%= modal do %>
-  <%= render "organizations/table", organizations: [@organization] %>
+  <%= render PageComponent.new(full_width: false) do |component| %>
+    <%= render "organizations/table", organizations: [@organization] %>
+  <% end %>
 <% end %>
