--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,8 @@
-<footer class="footer lg:footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-300 space-y-2">
+<footer class="footer lg:footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-100 gap-y-4">
   <aside>
     <div>
       <%= link_to root_path, class: "no-underline" do %>
-        <%= image_tag "logo.png", class: "size-8 lg:hidden dark:invert" %>
-        <%= image_tag "logo-long.png", class: "w-auto h-8 hidden lg:block dark:invert" %>
+        <%= image_tag "logo-long.png", class: "w-auto h-8 dark:invert" %>
       <% end %>
     </div>
     &copy; <%= Time.zone.now.year %>
@@ -12,12 +11,12 @@
   </aside>
 
   <nav>
-    <%= active_link_to t("static.index.title"), root_path, class_active: "link-active", class: "link link-hover" %>
-    <%= active_link_to t("static.pricing.title"), pricing_path, class_active: "link-active", class: "link link-hover" %>
+    <%= active_link_to t("static.index.title"), root_path, active: :exclusive, class_active: "underline", class: "link link-hover" %>
+    <%= active_link_to t("static.pricing.title"), pricing_path, active: :exclusive, class_active: "underline", class: "link link-hover" %>
   </nav>
   <nav>
-    <%= active_link_to t("static.terms.title"), terms_path, data: { turbo_frame: :modal }, class_active: "link-active", class: "link link-hover" %>
-    <%= active_link_to t("static.privacy.title"), privacy_path, data: { turbo_frame: :modal }, class_active: "link-active", class: "link link-hover" %>
-    <%= active_link_to t("static.refunds.title"), refunds_path, data: { turbo_frame: :modal }, class_active: "link-active", class: "link link-hover" %>
+    <%= active_link_to t("static.terms.title"), terms_path, data: { turbo_frame: :modal }, class_active: "underline", class: "link link-hover" %>
+    <%= active_link_to t("static.privacy.title"), privacy_path, data: { turbo_frame: :modal }, class_active: "underline", class: "link link-hover" %>
+    <%= active_link_to t("static.refunds.title"), refunds_path, data: { turbo_frame: :modal }, class_active: "underline", class: "link link-hover" %>
   </nav>
 </footer>
