Update modal layout and add project success messages
Refactored modal close button layout for improved alignment and spacing. Added success messages for project creation, update, and deletion in both English and French locale files.

--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -5,10 +5,10 @@
 <% if turbo_frame_request? %>
   <%= turbo_frame_tag :modal do %>
     <dialog class="modal <%= dialog_position %> backdrop-blur-lg transition-none" data-controller="dialog" data-action="click->dialog#clickOutside <%= close_on_submit ? "turbo:submit-end->dialog#hideOnSubmit" : "" %>">
-      <div class="modal-box space-y-2 transition-none">
-        <div class="absolute top-2 right-2 z-10">
+      <div class="modal-box gap-y-2 transition-none">
+        <div class="flex justify-end mb-6">
           <form method="dialog" class="">
-            <button class="btn btn-ghost btn-sm btn-circle">
+            <button class="btn btn-sm btn-circle">
               <%= inline_svg_tag "svg/x-mark.svg", class: "size-4" %>
             </button>        
           </form>
