noticed notifications - fix turbo_stream delivery method

--- a/app/views/users/notifications/index.html.erb
+++ b/app/views/users/notifications/index.html.erb
@@ -4,6 +4,8 @@
   <%= turbo_refreshes_with method: :morph, scroll: :preserve %>
 <% end %>
 
+<%= turbo_stream_from "notifications_index_list_#{current_user.id}" %>
+
 <%= render PageComponent.new(title: t(".title")) do |component| %>
   <%= turbo_frame_tag :notifications, target: "_top" do %>
     <% if @notifications.any? %>
