--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -11,7 +11,7 @@
           <%= render "shared/flash" %>
         </div>
       </header>
-      <main class="flex-grow pt-20 bg-base-100">
+      <main class="flex-grow p-4 lg:p-10 bg-base-100">
         <%= yield %>
       </main>
       <%= render "shared/footer" %>
