--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,23 +10,22 @@
     </label>
 
     <%# select org dropdown %>
-    <div class="lg:hidden dropdown dropdown-start group">
-      <div tabindex="0" role="button" class="btn btn-ghost">
-        <% if Current.organization %>
-          <%= organization_avatar(Current.organization, classes: "size-6") %>
-          <%= Current.organization.name %>
-        <% else %>
-          <%= t("shared.navigation.select_organization") %>
-        <% end %>
-        <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-focus-within:rotate-180" %>
+    <% if Current.organization %>
+      <div class="lg:hidden dropdown dropdown-start group">
+        <div tabindex="0" role="button" class="btn btn-ghost">
+            <%= organization_avatar(Current.organization, classes: "size-6") %>
+            <%= Current.organization.name %>
+          <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-focus-within:rotate-180" %>
+        </div>
+        <ul tabindex="-1" class="menu menu-xl dropdown-content bg-base-100 rounded-box mt-3 shadow border border-base-content/20">
+          <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: Current.organization.user_requests.pending.count, active: [["organizations/memberships", "organizations/invitations", "organizations/membership_requests"], []] %>
+          <% if Current.membership.admin? %>
+            <%= nav_link t("organizations.edit.title"), edit_organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["edit"]] %>
+            <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(Current.organization), icon: subscription_status_label(Current.organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+          <% end %>
+        </ul>
       </div>
-      <ul tabindex="-1" class="menu menu-xl dropdown-content bg-base-100 rounded-box mt-3 shadow border border-base-content/20">
-        <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
-        <% Current.organizations.excluding(Current.organization).each do |organization| %>
-          <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
-        <% end %>
-      </ul>
-    </div>
+    <% end %>
   </div>
 
   <%# center %>
