--- a/app/views/devise/shared/_oauth_links.html.erb
+++ b/app/views/devise/shared/_oauth_links.html.erb
@@ -1,7 +1,7 @@
-<% if devise_mapping.omniauthable? && resource_class.omniauth_providers.any? %>
-  <% resource_class.omniauth_providers.each do |provider| %>
-    <% next if ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:sign_in] == false %>
-    <%= button_to omniauth_authorize_path(resource_name, provider),
+<% providers = Rails.application.config.omniauth_providers.select { |p| ConnectedAccount::PROVIDER_CONFIG[p.to_sym]&.dig(:sign_in) == true } %>
+<% if providers.any? %>
+  <% providers.each do |provider| %>
+    <%= button_to "/auth/#{provider}",
                   data: { turbo: false },
                   class: "btn btn-outline btn-block" do %>
         <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
