--- a/app/views/organizations/projects/new.html.erb
+++ b/app/views/organizations/projects/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "New project" %>
 
-<%= modal do %>
-  <%= render PageComponent.new(title: "New project") do |component| %>
+<%= modal title: "New project" do %>
+  <%= render PageComponent.new do |component| %>
     <%= render "form", project: @project %>
   <% end %>
 <% end %>
