--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,13 +1,8 @@
 <nav class="dock dock-lg sticky bottom-0 lg:hidden border-t border-base-content/20">
   <% if Current.organization %>
-    <%= active_link_to organization_dashboard_path(Current.organization), class_active: "dock-active", class: "" do %>
+    <%= active_link_to organization_dashboard_path(Current.organization), active: /^\/organizations\//, class_active: "dock-active", class: "" do %>
       <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
-      <span class="dock-label"><%= t("organizations.dashboard.index.title") %></span>
-    <% end %>
-
-    <%= active_link_to organization_projects_path(Current.organization), class_active: "dock-active", class: "" do %>
-      <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-[1.2em]" %>
-      <span class="dock-label"><%= t("organizations.projects.index.title") %></span>
+      <span class="dock-label"><%= t("shared.navigation.home") %></span>
     <% end %>
   <% else %>
     <%= active_link_to organizations_path, active: :exclusive, class_active: "dock-active", class: "" do %>
