mobile - nav menu for org links

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -68,3 +68,9 @@
     </div>
   </div>
 </nav>
+
+<% if Current.organization %>
+  <div class="menu menu-horizontal lg:hidden">
+    <%= render "shared/sidebar_links" %>
+  </div>
+<% end %>
