--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="dock dock-lg sticky bottom-0 lg:hidden border-t border-base-content/20">
   <% if Current.organization %>
-    <%= active_link_to organization_dashboard_path(Current.organization), active: /^\/organizations\//, class_active: "dock-active", class: "" do %>
+    <%= active_link_to organization_dashboard_path(Current.organization), active: %r{^/organizations/}, class_active: "dock-active", class: "" do %>
       <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
       <span class="dock-label"><%= t("shared.navigation.home") %></span>
     <% end %>
