--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,10 +1,10 @@
 <div class="drawer-side z-20">
-  <label for="main-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+  <label for="main-drawer" aria-label="Close sidebar" class="drawer-overlay"></label>
   <aside class="bg-base-300 h-dvh flex flex-col overflow-y-auto w-80">
     <ul class="menu menu-xl w-full flex-1">
       <%= nav_link Rails.application.config_for(:settings).dig(:site, :name), root_path, icon: "logo.png", active: :exact %>
       <%# search %>
-      <%#= nav_link t("search.index.title"), search_path, icon: "svg/magnifying-glass.svg", data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" } %>
+      <%# = nav_link t("search.index.title"), search_path, icon: "svg/magnifying-glass.svg", data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" } %>
       <%= nav_link t("search.index.title"), search_path, icon: "svg/magnifying-glass.svg", data: { turbo_frame: :modal } %>
       <li></li>
 
@@ -31,10 +31,10 @@
       </div>
 
       <%# mobile - sidebar for switching between organizations %>
-      <div class="<% if Current.organization %>lg:hidden<% end %>">
+      <div class="<% if Current.organization %> lg:hidden <% end %>">
         <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: :exact %>
         <% Current.organizations.each do |organization| %>
-            <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
+          <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
         <% end %>
       </div>
     </ul>
@@ -55,13 +55,10 @@
             </details>
           </li>
         <% end %>
-
         <% unless dev_links.empty? %>
           <li>
             <details>
-              <summary>
-                <span class="font-medium font-mono">Dev</span>
-              </summary>
+              <summary><span class="font-medium font-mono">Dev</span></summary>
               <ul>
                 <% dev_links.each do |link| %>
                   <%= nav_link link[:name], link[:path], icon: link[:icon] %>
@@ -73,6 +70,5 @@
       <% end %>
       <li></li>
     </ul>
-
   </aside>
 </div>
