--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -21,23 +21,33 @@
               <%= number_to_currency (plan[:unit_amount].to_f / 100), unit: currency_symbol(plan[:currency]), strip_insignificant_zeros: true %>
             </span>
 
-            <span class="text-2xl whitespace-nowrap">/<%= plan[:interval] %></span>
+            <% unless plan[:interval] == "one_time" %>
+              <span class="text-2xl whitespace-nowrap">/<%= plan[:interval] %></span>
+            <% end %>
           </div>
 
           <div>
             <% if user_signed_in? && @organization.present? %>
               <% if @organization.has_access? %>
-                <% current_plan = plan_for(@organization.payment_processor.subscription) %>
-                <% if current_plan && current_plan[:interval] == plan[:interval].to_s %>
-                  <%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
+                <% if plan[:interval] == "one_time" %>
+                  <%# For one-time payments, allow multiple purchases %>
+                  <%= link_to t(".purchase", default: "Purchase"), organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
                 <% else %>
-                  <%= button_to t("organizations.subscriptions.plan.manage_billing"), organization_subscriptions_billing_portal_path(Current.organization), data: { turbo: false }, class: "btn btn-secondary" %>
+                  <%# For subscriptions, check current subscription %>
+                  <% current_plan = plan_for(@organization.payment_processor.subscription) if @organization.payment_processor&.subscription %>
+                  <% if current_plan && current_plan[:interval] == plan[:interval].to_s %>
+                    <%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
+                  <% else %>
+                    <%= button_to t("organizations.subscriptions.plan.manage_billing"), organization_subscriptions_billing_portal_path(Current.organization), data: { turbo: false }, class: "btn btn-secondary" %>
+                  <% end %>
                 <% end %>
               <% else %>
-                <%= link_to t(".subscribe"), organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
+                <% button_text = plan[:interval] == "one_time" ? t(".purchase", default: "Purchase") : t(".subscribe") %>
+                <%= link_to button_text, organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
               <% end %>
             <% else %>
-              <%= link_to t(".subscribe"), new_user_registration_path, class: "btn btn-primary" %>
+              <% button_text = plan[:interval] == "one_time" ? t(".purchase", default: "Purchase") : t(".subscribe") %>
+              <%= link_to button_text, new_user_registration_path, class: "btn btn-primary" %>
             <% end %>
           </div>
         </div>
