if a price exists but was removed from settings, still fetch it

--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -34,7 +34,7 @@
                 /
                 <%= current_plan[:interval] %>
               <% else %>
-                <%= t(".price_not_available") %>
+                <%= subscription.processor_plan %>
               <% end %>
             </div>
           </td>
