--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for([ @organization, project ], html: { class: "contents space-y-4", data: { controller: "auto-submit", action: "keydown.ctrl+enter->auto-submit#submit keydown.meta+enter->auto-submit#submit" } }) do |form| %>
   <%= render "shared/errors", object: form.object %>
 
-  <div class=""><%= form.input :name %></div>
+  <div class=""><%= form.input :name, required: true %></div>
 
   <div class="flex justify-end">
     <%= form.submit class: "btn btn-primary" %>
